--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ __pycache__/
 # C extensions
 *.so
 
+# Ignore secret folders and API keys
+/secrets/
+/.streamlit/secrets.toml
+
 # Distribution / packaging
 .Python
 build/
